@@ -1,5 +1,5 @@
 CMAKE_MINIMUM_REQUIRED (VERSION 2.6.2)
 PROJECT (Adaptics)
 
-ADD_SUBDIRECTORY(evo_test)
-ADD_SUBDIRECTORY(learn_test)
+ADD_SUBDIRECTORY(mt)
+ADD_SUBDIRECTORY(boxmuller)
